<resources>
    <string name="app_name">CinemaLab</string>

    <!--Bottom's Strings-->
    <string name="bottom_home">Главная</string>
    <string name="bottom_favorites">Избранное</string>
    <string name="bottom_profile">Профиль</string>

    <string name="my_tab">Моя вкладка</string>
    <string name="interesting">Интересное</string>

    <string name="search_view">Фильмы, сериалы</string>
    <string name="favorites_search_view">Поиск в "избранном"</string>

    <string name="clear_options">Сбросить</string>
    <string name="all_categories">All</string>
    <string name="films">Фильмы</string>
    <string name="series">Сериалы</string>
    <string name="cartoon">Мультики</string>
    <string name="anime">Аниме</string>
    <string name="tv_show">ТВ-Шоу</string>

    <string name="genres">Жанры</string>
    <string name="countries">Страны</string>
    <string name="year">Год</string>
    <string name="rating">Рэйтинг</string>
    <string name="popularity">Популярности</string>
    <string name="date">Дате</string>
    <string name="any">любой</string>
    <string name="rating_text">7</string>
    <string name="sort_by">Сортировать по</string>
    <string name="search">Поиск</string>


    <string name="total_in_favorites">0 total</string>
    <string name="mytab_main_text">Это Ваша вкладка</string>
    <string name="mytab_sub_text">Настройте её под себя и укажите, что хотели бы здесь видеть</string>
    <string name="set_up_btn">Настроить</string>

    <string name="movie_year">Год производства</string>
    <string name="movie_countries">Страна</string>
    <string name="movie_genres">Жанр</string>
    <string name="movie_slogan">Слоган</string>
    <string name="movie_director">Режиссер</string>
    <string name="movie_producer">Продюсер</string>
    <string name="movie_operator">Оператор</string>
    <string name="movie_designer">Художник</string>
    <string name="movie_editor">Монтаж</string>
    <string name="movie_budget">Бюджет</string>
    <string name="movie_description">Когда засуха, пыльные бури и вымирание растений приводят человечество
        к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину
        (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие
        , чтобы превзойти прежние ограничения для космических путешествий человека и найти планету с подходящими для
        человечества условиями.</string>

</resources>